remove padding causing buggy white space between header and 1st section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 
 header{
     background-color: black;
-    height: 225px;
+    height: 150px;
 }
 
 h1,h2 {letter-spacing: 3px;}
@@ -27,7 +27,7 @@ h1,h2 {letter-spacing: 3px;}
 }
 #maynes {
     float: left;
-    padding: 30px ;
+    
     color: rgb(232, 3, 3);
     font-size: 450%;
     margin-left: 50px;
@@ -40,7 +40,7 @@ h1,h2 {letter-spacing: 3px;}
 
 #nav-links li{
     float: right;
-    padding: 10px;
+    
     list-style-type: none;
     margin-right: 20px;
     top: 150px;
@@ -88,18 +88,18 @@ color: rgb(232, 3, 3);
     
 
     padding: 20px;
-    background-color:rgb(0, 0, 0, .9);
+    background-color:rgba(5, 5, 2, 0.3);
    
 
     position: absolute;
-    left: 500px;
-    bottom: 250px;
+    left: 550px;
+    bottom: 300px;
 }
 
 #home-image {
     width: 100%;
-    height: 650px;
-    background: url(../images/rows-wine-bottles.jpeg) no-repeat center center;
+    height: 800px;
+    background: url(../images/jameson-bottles.jpg) no-repeat center center;
     background-size: cover;
     position: absolute;
     
@@ -120,7 +120,7 @@ color: rgb(232, 3, 3);
 }
 #home-outer {
     width: 100%;
-    height: 600px;
+    height: 800px;
     overflow: hidden;
     background-color: black;
     position: relative;
@@ -128,11 +128,16 @@ color: rgb(232, 3, 3);
 /* open and club blocks */
 
 #bottom-blocks {
-    background-color: maroon;
-    height: 300px;
+    background-color: rgb(6, 6, 6);
+    height: 450px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
     
     
 }
+
+
 
 #opening{
 width: 40%;
@@ -143,6 +148,8 @@ margin: 0 5%;
 text-align: center;
 height: auto;
 margin-top: 30px;
+font-size: 150%;
+
 
 }
 
@@ -150,13 +157,16 @@ margin-top: 30px;
 width: 40%;
 float: right;
 margin: 0 5%;
-background-color: rgb(195, 11, 11, .7);
+background-color: rgba(5, 5, 5, 0.7);
 color: white;
 text-align: center;
 height: auto;
+margin-top: 30px;
+font-size: 150%;
 
 
 }
+
 
 
 /* footer link stylings */
